--- a/src/main/webapp/companionPost.html
+++ b/src/main/webapp/companionPost.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>여행 동행글 쓰기</title>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 <script>
    $(function(){
 	    $("#navbar").load("layout/navbar.html");
@@ -12,36 +15,68 @@
 </script>
 </head>
 <body>
+	
 <div id="navbar"></div>
 	<div id="location">한국</div>
+	
 
 	<form action="companionPost.jsp" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
-		<br/>
-		제목: <input type="text" name="title">
-		<br/>
-		여행날짜 선택: <input type="date" id="currentDate" name="travel_date" min="2023-01-01" max="2023-12-31" />
-		여행기간: <input type="text" name="travel_period">
-		<br/>
-		모집마감일 : <input type="date" id="currentDate" name="deadline" min="2023-01-01" max="2023-12-31" />
-		<br/>
-		예상 비용: <input type="text" name="expected_cost">
-		<br/>
-		모집인원
-		<br/>
-		인원수 : <input type="number" name="number_of_recruited">
-		성별 : <input type="text" name="gender_condition">
-		나이 : <input type="text" name="age_condition">
-		국적 : <input type="text" name="nationality_condition">
-		<br/>
-		사진첨부: <input type="file" name="image">
-		<br/>
-		글쓰기: <input type="text" name="content_text">
+		<div class="mb-3">
+		  <label for="formGroupExampleInput" class="form-label">제목</label>
+		  <input type="text" name="title" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+		</div>
+		<div class="input-group mb-3">
+		  <span class="input-group-text" id="basic-addon1">여행날짜 선택</span>
+		  <input type="date" id="currentDate" name="travel_date" min="2023-01-01" max="2023-12-31" class="form-control">
+		  <span class="input-group-text" id="basic-addon1">여행기간</span>
+		  <input type="text" name="travel_period" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+		</div>
 		
+		  <div class="col-sm-5">
+			  <div class="input-group mb-3">
+			<span class="input-group-text" id="basic-addon1">모집마감일</span>
+		    <input type="date" name="deadline" min="2023-01-01" max="2023-12-31" class="form-control">
+		    </div>
+		    <div class="input-group mb-3">
+		  <span class="input-group-text" id="basic-addon1">예상비용</span>
+		  <input type="text" name="expected_cost" class="form-control">
+		</div>
+		  </div>
+		
+		모집인원
+		<div class="input-group mb-3">
+		  <span class="input-group-text" id="basic-addon1">인원수</span>
+		  <input type="number" name="number_of_recruited" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+		  <span class="input-group-text" id="basic-addon1">성별</span>
+		  <input type="text" name="gender_condition" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+		  <span class="input-group-text" id="basic-addon1">나이</span>
+		  <input type="text" name="age_condition" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+		  <span class="input-group-text" id="basic-addon1">국적</span>
+		  <input type="text" name="nationality_condition" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+		</div>
+		
+		
+		<div class="mb-3">
+		  <label for="formGroupExampleInput2" class="form-label">사진 첨부</label>
+		  <input input type="file" name="image" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+		</div>
+		<div class="mb-3">
+			<label for="formGroupExampleInput" class="form-label">글쓰기</label>
+		<div class="input-group">
+			<textarea class="form-control" name="content_text" aria-label="With textarea" style="height: 300px;"></textarea>
+		</div>
+		</div>
+		
+		<br/>
+		
+
 		
 		
 	
 		<br/>
 		<br/>
+		<button type="reset" class="btn btn-primary">Reset</button>
+		<button type="submit" class="btn btn-primary">Submit</button>
 		<input type="reset" value="Reset"/><input type="submit" value="Submit"/>
 	</form>
 
