--- a/src/main/webapp/introducePost.html
+++ b/src/main/webapp/introducePost.html
@@ -5,6 +5,9 @@
 
 <title>일정소개글 쓰기</title>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 <script>
    $(function(){
 	    $("#navbar").load("layout/navbar.html");
@@ -20,24 +23,49 @@
 	<div id="location">한국</div>
 
 	<form action="introducePost.jsp" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
-		<br/>
-		제목: <input type="text" name="title">
-		<br/>
-		여행날짜 선택: <input type="date" id="currentDate" name="travel_date" min="2023-01-01" max="2023-12-31" />
-		여행기간: <input type="text" name="travel_period">
-		<br/>
-		여행비용: <input type="text" name="cost">
-		<br/>
-		사진첨부: <input type="file" name="image">
-		<br/>
-		글쓰기: <input type="text" name="content_text">
+		<div class="mb-3">
+		  <label for="formGroupExampleInput" class="form-label">제목</label>
+		  <input type="text" name="title" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+		</div>
+		<div class="input-group mb-3">
+		  <span class="input-group-text" id="basic-addon1">여행날짜 선택</span>
+		  <input type="date" id="currentDate" name="travel_date" min="2023-01-01" max="2023-12-31" class="form-control">
+		  <span class="input-group-text" id="basic-addon1">여행기간</span>
+		  <input type="text" name="travel_period" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+		</div>
 		
+		  <div class="col-sm-5">
+		    <div class="input-group mb-3">
+		  <span class="input-group-text" id="basic-addon1">비용</span>
+		  <input type="text" name="cost" class="form-control">
+		</div>
+		  </div>
+
+		
+		
+		<div class="mb-3">
+		  <label for="formGroupExampleInput2" class="form-label">사진 첨부</label>
+		  <input input type="file" name="image" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+		</div>
+		<div class="mb-3">
+			<label for="formGroupExampleInput" class="form-label">글쓰기</label>
+		<div class="input-group">
+			<textarea class="form-control" name="content_text" aria-label="With textarea" style="height: 300px;"></textarea>
+		</div>
+		</div>
+		
+		<br/>
+		
+
 		
 		
 	
 		<br/>
 		<br/>
-		<input type="reset" value="Reset"/><input type="submit" value="Submit"/>
+		<button type="reset" class="btn btn-primary">Reset</button>
+		<button type="submit" class="btn btn-primary">Submit</button>
+
+		
 	</form>
 
 
