--- a/src/main/webapp/signin.html
+++ b/src/main/webapp/signin.html
@@ -13,7 +13,7 @@
 	
 	<div class="loginForm">
 	
-		<form action="login.jsp" method="post">
+		<form action="signin.jsp" method="post">
 		<div class="input">
 			ID (Mid1) <input type = "text" name = "member_id"/><br>
 		</div>
@@ -27,7 +27,7 @@
 	</div>
 	
 	<h3>아직 회원이 아니신가요?</h3>
-	<a href="signup.html">회원가입하기</a>
+	<a href="join.html">회원가입하기</a>
 	
 </body>
 </html>
